fix: style overflow

--- a/src/components/productlisting/productlist.css
+++ b/src/components/productlisting/productlist.css
@@ -59,7 +59,11 @@
   grid-template-columns: repeat(auto-fill, minmax(15rem, 1fr));
   margin: 2rem;
   row-gap: 1.5rem;
-  max-width: 100vw;
+  width: 100%;
+}
+
+.search-product-cards {
+  width: 95vw;
 }
 
 .card-default-product {
@@ -223,6 +227,17 @@
   cursor: not-allowed;
 }
 
+.page-btn {
+  width: 4rem;
+}
+
+.page-number {
+  align-items: center;
+  display: inline-flex;
+  justify-content: center;
+  margin: 5px;
+  width: 1.6rem;
+}
 /* Media for hover */
 @media only screen and (max-width: 640px) {
   .card-default-product:hover {
@@ -238,18 +253,6 @@
   * {
     -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
   }
-}
-
-.page-btn {
-  width: 4rem;
-}
-
-.page-number {
-  align-items: center;
-  display: inline-flex;
-  justify-content: center;
-  margin: 5px;
-  width: 1.6rem;
 }
 
 /* Media Queries */
